@@ -1,3 +1,7 @@
+2008-09-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/configsnapshot.in: Bugfix in root subtree parameters
+
 2008-09-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Filtered out EOBC and FIFO
